# smart-home-ui

./: Cargo.toml  LICENSE  README.md
src/: main.rs
